# escher-backend-poc

./: .gitignore  README.md
c-bazel-example/: .gitignore  WORKSPACE  websocket.BUILD
c-bazel-example/lib/: BUILD
c-bazel-example/main/: BUILD
c-bazel-example/test/: BUILD  hello-test.cc
go-chat-server/: glide.yaml
go-chat-server/src/: main.go  server.go
go-chat-server/src/handlers/: EchoHandler.go
groot/: .editorconfig  .gitignore
groot/src/chat-server/: Makefile  README.md  chat-server  glide.yaml  main.go
groot/src/chat-server/handlers/: EchoHandler.go
java-chat-server/: pom.xml
java-chat-server/src/main/java/escher/: ChatServer.java  Handler.java
java-chat-server/src/test/java/escher/: AppTest.java
java-chat-server/static/: index.html
rust-chat-server/: .gitignore  Cargo.toml  openssl_fix
rust-chat-server/src/: client.rs  main.rs  websocket.html
rust-playground/: Cargo.toml
rust-playground/json/: Cargo.toml
rust-playground/src/: main.rs
socket-server/: .gitignore  README.md  actionHandle.js  models.js  package.json  simple-test.js  socketServer.js
