[package]
name = "playground"
version = "0.1.0"
authors = ["Ge Yang <ge@uber.com>"]

[[bin]]
name = "euler"
path = "src/main.rs"

[dependencies]
anymap = "~0.12.0"
csv = "~0.14.7"
docopt = "~0.6.82"
docopt_macros = "~0.6.85"
image = "~0.10.1"
itertools = "~0.4.17"
json_macros = "~0.3.2"
libc = "~0.2.15"
nalgebra = "~0.8.2"
num = "~0.1.34"
postgres_array = "~0.6.2"
postgres_range = "~0.8.2"
primal = "~0.2.3"
rand = "~0.3.14"
redis = "~0.7.0"
rust-crypto = "~0.2.36"
rustc-serialize = "~0.3.18"
time = "~0.1.35"
tau = "~1.0.4"
url = "~1.1.1"